# Madar

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  tsconfig.json
.github/workflows/: deploy.yml  release.yml
src/: App.svelte  app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/lib/: ControlPanel.svelte  HeroSection.svelte  SearchBar.svelte  SimCard.svelte  SimPlayer.svelte  TutorialModal.svelte  simulations.ts  types.ts
