[package]
name = "madar"
version = "1.2.0"
description = "Interactive STEM Simulation Browser"
authors = ["Hasnain Abbas"]
edition = "2021"

[lib]
name = "madar_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = "s"
